--- a/app/package.json
+++ b/app/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@worldcoin/minikit-js": "^1.1.0",
     "ethers": "^6.11.1",
     "lucide-react": "^0.344.0",
     "next": "14.1.0",
