Clarify path mapping in tsconfig.json
Added a comment to clarify the purpose of the path mapping.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,7 @@
       }
     ],
     "paths": {
-      "@/*": ["./*"]
+      "@/*": ["./*"]  // 👈 บรรทัดนี้สำคัญมาก! บอกว่า @ คือ root directory
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
