--- a/package.json
+++ b/package.json
@@ -13,17 +13,17 @@
     "@worldcoin/minikit-js": "^1.1.0",
     "ethers": "^6.11.1",
     "lucide-react": "^0.344.0",
-    "next": "14.1.0",
+    "next": "^14.2.23",
     "react": "^18",
-    "react-dom": "^18",
-    "autoprefixer": "^10.0.1",
-    "postcss": "^8",
-    "tailwindcss": "^3.3.0"
+    "react-dom": "^18"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "typescript": "^5"
+    "typescript": "^5",
+    "autoprefixer": "^10.0.1",
+    "postcss": "^8",
+    "tailwindcss": "^3.3.0"
   }
 }
